Fix catalog dropdown alignment for firefox

--- a/frontend/public/components/catalog/_catalog.scss
+++ b/frontend/public/components/catalog/_catalog.scss
@@ -107,7 +107,7 @@ $catalog-tile-width: $co-m-catalog-tile-width;
   }
 
   &__btn-group__group-by {
-    display: inline-flex;
+    display: inline;
     margin-left: var(--pf-global--spacer--md);
   }
 
